# quibbler

./: .gitignore  IFLOW_README.md  INSTALL.md  MCP_SETUP_GUIDE.md  README.md  pyproject.toml
critic/: cli.py  critic.py  hook_display.py  hook_forward.py  logging_config.py  server.py
quibbler/: agent.py  cli.py  clients.py  config.py  enhanced_logger.py  hook_display.py  hook_forward.py  hook_server.py  iflow_agent.py  iflow_client.py  iflow_hook_config.py  iflow_hook_server.py  iflow_mcp_server.py  iflow_prompts.py  logger.py  mcp_server.py  prompts.py  server.py  service.py  types.py
