[project]
name = "quibbler"
version = "0.2.0"
description = "Code review agent for AI coding assistants via MCP"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "claude-agent-sdk>=0.1.0",
    "mcp[cli]>=1.18.0",
]

[project.scripts]
quibbler = "quibbler.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
