[project]
name = "quibbler"
version = "0.3.1"
description = "Code review agent for AI coding assistants via MCP"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "claude-agent-sdk>=0.1.0",
    "fastapi>=0.120.1",
    "mcp[cli]>=1.18.0",
    "requests>=2.32.5",
    "uvicorn>=0.38.0",
]

[project.optional-dependencies]
bedrock = [
    "boto3>=1.35.0",
]

[project.scripts]
quibbler = "quibbler.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
