[project]
name = "quibbler-flow"
version = "0.4.0"
description = "Code review agent for AI coding assistants (Claude Code, iFlow CLI) via MCP and Hooks"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "claude-agent-sdk>=0.1.0",
    "fastapi>=0.120.1",
    "httpx>=0.27.0",
    "mcp[cli]>=1.18.0",
    "requests>=2.32.5",
    "uvicorn>=0.38.0",
]

[project.scripts]
quibbler = "quibbler.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["quibbler"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
